--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -11,9 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download\n",
     "\n",
-    "Download the data from the source to your file system so you can start exploring it. The official dataset is located [here](https://www.kaggle.com/rounakbanik/the-movies-dataset/data) but we **highly** recommend using our slightly cleaned version [here](https://drive.google.com/drive/folders/1ZGp7ORu9nA6l3PyNK_H0MGTXNl4sNMsA?usp=sharing) (where we combined movies, keywords and credits into one DataFrame)."
+    "\n",
+    "dataset : https://www.kaggle.com/rounakbanik/the-movies-dataset/data  \n",
+    "cleaned : https://drive.google.com/drive/folders/1ZGp7ORu9nA6l3PyNK_H0MGTXNl4sNMsA?usp=sharing"
    ]
   },
   {
@@ -2802,7 +2803,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
