--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -405,7 +405,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## explanatory"
+    " ## Quick Explanatory\n",
+    " \n",
+    "Which country have twhe most movies produced?"
    ]
   },
   {
@@ -485,7 +487,7 @@
     "\n",
     "#### Using keywords column to predict Genre\n",
     "\n",
-    "Each movie is classified as mulitple genres. I am going to predict the muliple genres using keywords column. String are cleaned and vectorized for algorithems."
+    "Each movie is classified as mulitple genres. I am going to predict the muliple genres using keywords column. String are cleaned and vectorized."
    ]
   },
   {
@@ -661,31 +663,6 @@
     "results = pd.DataFrame(columns = ['F1 Score']) \n",
     "for i in range (10):\n",
     "    Xtrain,Xtest,ytrain,ytest = train_test_split(X2,y,test_size=0.2,random_state=i)\n",
-    "    clf.fit(Xtrain,ytrain)\n",
-    "    pred=clf.predict(Xtest)\n",
-    "    results=results.append({'F1 Score' : f1_score(ytest,pred,average=\"micro\")}, ignore_index=True)\n",
-    "plt.figure(figsize=(8,8))\n",
-    "plt.title('F1 Score')\n",
-    "sns.boxplot(x=results['F1 Score'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Using description and keywords column to predict Genre\n",
-    "\n",
-    "concatenated sparse matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "X = sp.hstack([X,X2],format='csr')\n",
-    "results = pd.DataFrame(columns = ['F1 Score']) \n",
-    "for i in range (10):\n",
-    "    Xtrain,Xtest,ytrain,ytest = train_test_split(X,y,test_size=0.2,random_state=i)\n",
     "    clf.fit(Xtrain,ytrain)\n",
     "    pred=clf.predict(Xtest)\n",
     "    results=results.append({'F1 Score' : f1_score(ytest,pred,average=\"micro\")}, ignore_index=True)\n",
@@ -1690,7 +1667,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### movie recommendations by user history & plot similarity"
+    "### movie recommendations by user history & plot similarity\n",
+    "\n",
+    "Used user rating csv to find top movies of specific users and recommended movies based on that."
    ]
   },
   {
